# election-bot

./: .gitignore  README.md  composer.json  deploy.php  deploy.yaml  fly.py  package-lock.json  package.json  pemilu.sqlite3  pyproject.toml
.github/workflows/: deploy.yml  greetings.yml  production-tagged.yml  pull-request.yml  pushed.yml  static-analysis.yml  test.yml
.husky/: pre-commit
app/: __init__.py  console.py  poll_maker.py
app/Console/: Kernel.php
app/Enums/: AccountType.php  ReportInterval.php
app/Exceptions/: PollBotException.php  ReportException.php
app/Models/: Account.php  Country.php  Poll.php  PollChoice.php  Report.php  Sentiment.php  Tweet.php
app/Observers/: TweetObserver.php
app/Providers/: EventServiceProvider.php
app/Services/: Poll.php  Report.php  Sentiment.php
app/config/: database.py  log.py
app/models/: Account.py  Poll.py  PollChoice.py  PollResult.py  Report.py  ReportWinner.py  Tweet.py  __init__.py
app/services/: clients.py  poll_maker.py  report.py  reporting.py
config/: app.php  database.php  database.py  logging.php  services.php
database/migrations/: 2023_05_12_222315_create_accounts_table.php  2023_05_12_222316_create_tweets_table.php  2023_05_12_222325_create_polls_table.php  2023_05_12_222350_create_poll_choices_table.php  2023_05_12_222357_create_poll_results_table.php  2023_05_12_222404_create_reports_table.php  2023_05_12_224122_create_report_polls_table.php  2023_05_12_224316_create_report_choices_table.php  2023_05_13_164208_add_alpha_id_to_existing_table.php  2023_05_14_023450_create_regions_table.php  (+8 more)
(+21 files in other folders)
